<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#52824c"
    tools:context=".Search">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="136dp"
        app:layout_constraintBottom_toTopOf="@+id/textView72"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView71"
            android:layout_width="334dp"
            android:layout_height="69dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/anton"
            android:text="@string/is_your_plant_broadleaf_or_nonbroadleaf"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:text="Is your plant broadleaf or nonbroadleaf?" />

        <Button
            android:id="@+id/buttonBroadleaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="47dp"
            android:layout_marginBottom="14dp"
            android:text="Broadleaf"
            android:textAlignment="center"
            tools:text="Broadleaf" />

        <Button
            android:id="@+id/buttonNonBroadleaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonBroadleaf"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="30dp"
            android:text="@string/nonbroadleaf"
            tools:text="NonBroadleaf" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView72"
        android:layout_width="170dp"
        android:layout_height="212dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>